thêm lệnh chỉ build từ txt về js không call gpt

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "config.js",
   "scripts": {
-    "serve": "node script.js"
+    "serve": "node script.js",
+    "merge": "node script.js -f"
   },
   "author": "Tô Nguyễn Đức Mạnh",
   "license": "ISC",
