--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "config.js",
   "scripts": {
     "serve": "node script.js",
-    "merge": "node script.js -f"
+    "merge": "node script.js -f",
+    "test": "node script.js -t"
   },
   "author": "Tô Nguyễn Đức Mạnh",
   "license": "ISC",
