--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "config.js",
   "scripts": {
-    "serve": "node script.js -f",
-    "merge": "node script.js",
+    "serve": "node script.js",
+    "merge": "node script.js -f",
     "test": "node script.js -t"
   },
   "author": "Tô Nguyễn Đức Mạnh",
