--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "openai": "^4.20.0"
+    "openai": "^4.20.0",
+    "uuid": "^9.0.1"
   }
 }
